fix cassandra table creation